--- a/src/components/blocks/Footer/Footer.module.scss
+++ b/src/components/blocks/Footer/Footer.module.scss
@@ -1,4 +1,5 @@
 .body{
+  background-color: #00000F;
 
 }
 
@@ -13,7 +14,8 @@
 
 .text{
     padding: 0 0 30px 0;
-    font-size: 24px;
+    font-size: 18px;
+    color: #ffffff;
 }
 
 .logo{
@@ -44,18 +46,40 @@
     gap: 5px;
     width: fit-content;
     height: auto;
-    font-size: 20px;
+    font-size: 15px;
   a{
     margin-bottom: 15px;
   }
 }
 
 a {
-    color: black;
+    color: #ffffff;
     text-decoration: none;
   }
 
+  .button{
+    width: 230px;
+    height: 70px;
+    transition: all 0.5s ease-out;
+    img{
+        width: 100%;
+        height: 100%;
+        border-radius: 16px;
+    }
+    &:hover{
+        width: 240px;
+        height: 80px;
+        margin: 0px auto 0 auto;
+    }
+}
+
+  .line{
+    height: 1px;
+    background-color: #ffffff;
+    margin: 10px 0;
+  }
   .copyright{
     padding: 10px 0;
     font-size: 14px;
 }
+
