--- a/src/components/blocks/Footer/Footer.module.scss
+++ b/src/components/blocks/Footer/Footer.module.scss
@@ -4,7 +4,7 @@
 }
 
 .wrapper{
-    font-family: 'Inter', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     display: flex;
     flex-direction: column;
     width: 100%;
