--- a/src/components/blocks/About/About.module.scss
+++ b/src/components/blocks/About/About.module.scss
@@ -3,7 +3,7 @@
 
 }
 .wrapper{
-    font-family: 'Inter', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     padding: 40px 0 20px 0;
     color: #FFFFFF;
     position: relative;
