--- a/src/components/blocks/RulesTerms/RulesTerms.module.scss
+++ b/src/components/blocks/RulesTerms/RulesTerms.module.scss
@@ -1,17 +1,18 @@
 .wrapper{
-    background: #000000;
-    font-family: 'Inter', sans-serif;
+    background: #141414;
+    font-family: 'Montserrat', sans-serif;
     background-size: cover;
-    height: 450px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .inner{
+    display: flex;
+    flex-direction: column;
     margin: auto;
     justify-content: space-between;
-    padding: 100px 0;
+    padding: 60px 0;
     font-size: 18px;
     color: rgb(255, 255, 255);
 }
@@ -25,6 +26,7 @@
 
 .description{
     padding: 50px;
+    text-align: center;
 }
 
 .red{
@@ -32,12 +34,13 @@
 }
 
 .buttonBlock{
+    margin: 0 auto;
     width: 330px;
     height: 80px;
 }
 
 .button{
-    left: 130%; //Не бей ради Бога, я с этим просидел 15 минут, оно никуда не двигалось :C
+
     width: 100%;
     height: 100%;
     font-size: 30px;
