--- a/src/components/blocks/About/About.module.scss
+++ b/src/components/blocks/About/About.module.scss
@@ -11,6 +11,7 @@
     max-width: 600px;
     height: 500px;
     overflow: hidden;
+    display: flex;
 }
 
 .red{
@@ -36,23 +37,19 @@
 
 
 .images{
-    padding: 40px 0 20px 0;
-    width: 60%;
-    position: relative;
-    float: right;
+    padding: 30px 0 20px 0;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
 }
 
-img {
-    max-width: 100%;
-    height: auto;
-  }
-
-  .first{
+.first{
     box-shadow: 10px -8px 0px 0px rgb(255, 255, 255);
-  }
+    grid-column: 1;
+    grid-row: 1;
+}
 .second{
-    position: absolute;
-    left: 60%;
-    bottom: 5%;
     box-shadow: 10px -8px 0px 0px rgb(255, 255, 255);
+    grid-column: 2;
+    grid-row: 2;
   }
