--- a/src/components/blocks/About/About.module.scss
+++ b/src/components/blocks/About/About.module.scss
@@ -2,6 +2,15 @@
     background-color: #330D0D;
 
 }
+
+.bodyWrapper{
+    width: 100%;
+    display: flex;
+    @media screen and (max-width: 1300px) {
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+}
 .wrapper{
     font-family: 'Montserrat', sans-serif;
     padding: 40px 0 20px 0;
@@ -12,6 +21,9 @@
     height: 500px;
     overflow: hidden;
     display: flex;
+    @media screen and (max-width: 1300px) {
+        height: auto;
+    }
 }
 
 .red{
@@ -41,6 +53,12 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 20px;
+    @media screen and (max-width: 1300px) {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: auto;
+    }
 }
 
 .first{
