--- a/src/components/blocks/AwardsnCat/AwardsnCat.module.scss
+++ b/src/components/blocks/AwardsnCat/AwardsnCat.module.scss
@@ -1,5 +1,6 @@
 .wrapper{
-    background-color: #330D0D;
+    background-color: #151b28;
+
     font-family: 'Montserrat', sans-serif;
     background-size: cover;
     display: flex;
@@ -23,7 +24,7 @@
 }
 
 .red{
-    color: #C74444;
+    color: #fc8252;
 }
 
 .nom{
