--- a/src/components/blocks/Operates/Overview.module.scss
+++ b/src/components/blocks/Operates/Overview.module.scss
@@ -1,5 +1,5 @@
 .wrapper{
-  background-color: #141414;
+  background-color: #151b28;
   padding: 60px 0;
   font-family: 'Montserrat', sans-serif;
 }
@@ -26,18 +26,17 @@
     border-radius: 16px;
   }
   &:hover{
-    width: 230px;
-    height: 72px;
+    transform: scale(1.1);
   }
 }
 
 .title{
-  font-size: 40px;
+  font-size: 36px;
   font-weight: 700;
   margin-bottom: 40px;
   color: #FFFFFF;
   b{
-    color: #D04B4B;
+    color: #fc8252;
   }
   @media screen and (max-width: 768px) {
     text-align: center
@@ -47,7 +46,6 @@
 .items{
   width: 100%;
   display: flex;
-  justify-content: space-between;
   flex-wrap: wrap;
   @media screen and (max-width: 768px) {
    display: block;
@@ -55,7 +53,8 @@
 }
 
 .item{
-  width: 40%;
+  width: 100%;
+  padding: 0 0 40px 0;
   &:not(:last-child){
     margin-bottom: 100px;
   }
@@ -68,7 +67,7 @@
 }
 
 .itemTitle{
-  color: #C74444;
+  color: #fc8252;
   text-align: center;
   font-size: 30px;
   font-style: normal;
@@ -79,7 +78,6 @@
 
 .itemText{
   color: #FFF;
-  text-align: center;
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
