--- a/src/components/blocks/Overview/Overview.module.scss
+++ b/src/components/blocks/Overview/Overview.module.scss
@@ -1,5 +1,5 @@
 .wrapper{
-  background-color: #141414;
+  background-color: #151b28;
   padding: 60px 0;
   font-family: 'Montserrat', sans-serif;
 }
@@ -33,7 +33,7 @@
   padding: 0 0 10px 0;
   width: fit-content;
   b{
-    color: #D04B4B;
+    color: #fc8252;
   }
   @media screen and (max-width: 920px) {
     margin: 40px auto 20px auto;
@@ -45,7 +45,7 @@
   color: white;
   margin: 0 0 40px 0;
   b{
-    color: #D04B4B;
+    color: #fc8252;
   }
 }
 
@@ -73,10 +73,6 @@
   max-height: 500px;
   border-radius: 16px;
   //box-shadow: white;
-  img{
-    box-shadow: 10px -8px 0px 0px rgb(255, 255, 255);
-
-  }
   @media screen and (max-width: 920px) {
     width: fit-content;
     margin: 0 auto;
