--- a/src/components/UI/Container/Awards.module.scss
+++ b/src/components/UI/Container/Awards.module.scss
@@ -5,5 +5,6 @@
     @media screen and (max-width: 1200px) {
         width: 100%;
         padding: 0 30px;
+        justify-content: center;
     }
 }
