--- a/src/components/blocks/About/About.module.scss
+++ b/src/components/blocks/About/About.module.scss
@@ -1,14 +1,15 @@
 .body{
-    background-color: #330D0D;
+    background-color: #151b28;
 
 }
 
 .bodyWrapper{
     width: 100%;
     display: flex;
-    @media screen and (max-width: 1300px) {
+    @media screen and (max-width: 1220px) {
         flex-direction: column;
         flex-wrap: wrap;
+        align-items: center;
     }
 }
 .wrapper{
@@ -21,19 +22,22 @@
     height: 500px;
     overflow: hidden;
     display: flex;
-    @media screen and (max-width: 1300px) {
+    @media screen and (max-width: 1220px) {
         height: auto;
     }
 }
 
-.red{
-    color: #C74444;
+.blue{
+    color: #fc8252;
 }
-
 
 .text{
     font-size: 23px;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     float: left;
 }
 
@@ -46,28 +50,9 @@
 
 }
 
-
-
-.images{
-    padding: 30px 0 20px 0;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 20px;
-    @media screen and (max-width: 1300px) {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        height: auto;
-    }
-}
-
 .first{
-    box-shadow: 10px -8px 0px 0px rgb(255, 255, 255);
-    grid-column: 1;
-    grid-row: 1;
+    width: 45%;
+    padding: 20px;
+    max-height: 500px;
+    align-items: center;
 }
-.second{
-    box-shadow: 10px -8px 0px 0px rgb(255, 255, 255);
-    grid-column: 2;
-    grid-row: 2;
-  }
