--- a/src/components/blocks/Banner/Banner.module.scss
+++ b/src/components/blocks/Banner/Banner.module.scss
@@ -1,75 +1,89 @@
-.wrapper{
-  background: url("../../../../public/images/banner/main-bg.png") no-repeat;
+.wrapper {
+  position: relative;
+  background: url("../../../../public/images/banner/main-bg.jpg") no-repeat;
   font-family: 'Montserrat', sans-serif;
   background-size: cover;
-  height: 550px;
+  height: 70vh;
   display: flex;
   width: 100%;
   @media screen and (max-width: 860px) {
     height: auto;
   }
+
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.4); /* затемнение */
+    z-index: 1;
+  }
 }
 
-.inner{
+.inner {
+  position: relative;
+  z-index: 2; /* гарантирует, что контент будет выше затемняющего слоя */
   display: flex;
   justify-content: space-between;
-  padding: 100px 0;
+  padding: 100px 10px;
   @media screen and (max-width: 860px) {
     flex-direction: column-reverse;
     padding: 50px 0;
   }
 }
 
-.info{
-  width: 55%;
+.info {
+  width: 60%;
+  justify-content: center;
   display: flex;
   flex-direction: column;
-  padding-top: 30px;
+  padding-top: 0px;
   @media screen and (max-width: 860px) {
     width: 100%;
   }
 }
 
-.title{
-  font-size: 40px;
+.title {
+  padding-top: 20px;
+  font-size: 46px;
   font-weight: 700;
-  margin-bottom: 20px;
   color: #FFFFFF;
-  b{
-    color: #D04B4B;
+  b {
+    color: #ffffff;
   }
 }
 
-.subTitle{
-  font-size: 23px;
+.subTitle {
+  font-size: 16px;
   color: #FFF;
-  margin-bottom: auto;
+  margin-bottom: 20px;
   @media screen and (max-width: 860px) {
     margin-bottom: 60px;
   }
 }
 
-.button{
+.button {
   width: 220px;
   height: 70px;
   transition: all 0.5s ease-out;
 
-  img{
+  img {
     width: 100%;
     height: 100%;
     border-radius: 16px;
   }
-  &:hover{
-    width: 230px;
-    height: 72px;
+  &:hover {
+    transform: scale(1.1);
   }
 }
 
-.logo{
+.logo {
   width: 40%;
   display: flex;
   justify-content: center;
-  img{
+  img {
     width: 100%;
     height: 100%;
     @media screen and (max-width: 860px) {
