--- a/src/components/UI/Menu/Menu.module.scss
+++ b/src/components/UI/Menu/Menu.module.scss
@@ -6,7 +6,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #151b28;
+    background-color: #1b1b1b;
     z-index: 1000;
     transform: translateY(-100%);
     transition: transform 0.3s ease;
@@ -23,7 +23,7 @@
       padding: 15px;
       color: white;
       border-bottom: 1px solid #ccc;
-      background-color: #1b2233;;
+      background-color: #1b1b1b;;
       font-size: 18px;
       font-weight: bold;
     }
