--- a/src/components/UI/Show/Show.module.scss
+++ b/src/components/UI/Show/Show.module.scss
@@ -4,12 +4,12 @@
 
 .ShowStyleOff {
     opacity: 0;
-    transform: translateX(-100%);
+    transform: translateY(-100%);
 }
 
 .ShowStyleOn {
     width: 100%;
     opacity: 1;
     transition: all 1s;
-    transform: translateX(0%);
+    transform: translateY(0%);
 }
