--- a/src/components/UI/Loader/Loader.module.scss
+++ b/src/components/UI/Loader/Loader.module.scss
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #151b28; /* цвет заднего фона */
+  background-color: #1b1b1b; /* цвет заднего фона */
   z-index: 9999; /* высокий z-index для отображения поверх всего */
 }
 
