--- a/src/components/blocks/Banner/Banner.module.scss
+++ b/src/components/blocks/Banner/Banner.module.scss
@@ -1,11 +1,11 @@
 .wrapper {
   position: relative;
-  background: url("../../../../public/images/banner/main-bg.jpg") no-repeat;
-  font-family: 'Montserrat', sans-serif;
-  background-size: cover;
-  height: 70vh;
+  font-family: "Plus Jakarta Sans", sans-serif;
+  height: 95vh;
   display: flex;
   width: 100%;
+  overflow: hidden; 
+
   @media screen and (max-width: 860px) {
     height: auto;
   }
@@ -17,14 +17,27 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.4); /* затемнение */
+    background: rgba(0, 0, 0, 0.4); 
     z-index: 1;
   }
 }
 
+.backgroundVideo {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: 0;
+  transform: translate(-50%, -50%);
+}
+
+
 .inner {
   position: relative;
-  z-index: 2; /* гарантирует, что контент будет выше затемняющего слоя */
+  z-index: 2; 
   display: flex;
   justify-content: space-between;
   padding: 100px 10px;
@@ -35,7 +48,8 @@
 }
 
 .info {
-  width: 60%;
+  width: 80%;
+  height: 700px;
   justify-content: center;
   display: flex;
   flex-direction: column;
@@ -47,16 +61,20 @@
 
 .title {
   padding-top: 20px;
-  font-size: 46px;
+  font-size: 64px;
   font-weight: 700;
   color: #FFFFFF;
   b {
     color: #ffffff;
   }
+  @media screen and (max-width: 760px) {
+    padding-top: 80px;;
+    font-size: 44px;
+  }
 }
 
 .subTitle {
-  font-size: 16px;
+  font-size: 18px;
   color: #FFF;
   margin-bottom: 20px;
   @media screen and (max-width: 860px) {
@@ -65,17 +83,44 @@
 }
 
 .button {
-  width: 220px;
-  height: 70px;
-  transition: all 0.5s ease-out;
-
-  img {
+  position: relative; 
+  overflow: hidden; 
+  background-color: rgb(255, 255, 255);
+  width: fit-content;
+  color: black;
+  width: 185px;
+  height: 60px;
+  font-size: larger;
+  border: rgb(0, 0, 0) 1px solid;
+  padding: 20px;
+  transition: color 0.5s ease-out; 
+  
+  &::after {
+    content: ''; 
+    position: absolute;
+    top: 100%; 
+    left: 0;
     width: 100%;
     height: 100%;
-    border-radius: 16px;
+    background-color: black;
+    transition: transform 0.5s ease-out; 
+    transform: translateY(0); 
+    z-index: 2; 
+  }
+  .textSubmit{
+    z-index: 3;
+    position: absolute;
+  }
+
+  .textSubmit:hover{
+    color: white;
   }
   &:hover {
-    transform: scale(1.1);
+    color: white;
+    
+    &::after {
+      transform: translateY(-100%); 
+    }
   }
 }
 
