--- a/src/components/blocks/CoreValues/CoreValues.module.scss
+++ b/src/components/blocks/CoreValues/CoreValues.module.scss
@@ -1,9 +1,9 @@
 .wrapper{
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Plus Jakarta Sans", sans-serif;
     background-size: cover;
     display: flex;
     padding: 60px 0;
-    background-color: #151b28;
+    background-color: #1b1b1b;
 }
 
 .inner{
@@ -34,7 +34,7 @@
     margin: 0 auto 40px auto;
     width: 75%;
     b{
-        color: #fc8252;
+        color: white;
     }
 }
 
