--- a/src/components/blocks/Footer/Footer.module.scss
+++ b/src/components/blocks/Footer/Footer.module.scss
@@ -1,10 +1,10 @@
 .body{
-  background-color: #151b28;
+  background-color: #000000;
 
 }
 
 .wrapper{
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Plus Jakarta Sans", sans-serif;
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -58,20 +58,6 @@ a {
     text-decoration: none;
   }
 
-  .button{
-    width: 230px;
-    height: 70px;
-    transition: all 0.5s ease-out;
-    img{
-        width: 100%;
-        height: 100%;
-        border-radius: 16px;
-    }
-    &:hover{
-      transform: scale(1.1);
-    }
-}
-
   .line{
     height: 1px;
     background-color: #ffffff;
@@ -82,3 +68,44 @@ a {
     font-size: 14px;
 }
 
+.button {
+  position: relative; 
+  overflow: hidden; 
+  background-color: rgb(255, 255, 255);
+  width: fit-content;
+  color: black;
+  width: 185px;
+  height: 60px;
+  font-size: larger;
+  border: rgb(0, 0, 0) 1px solid;
+  padding: 20px;
+  transition: color 0.5s ease-out; 
+  
+  &::after {
+    content: ''; 
+    position: absolute;
+    top: 100%; 
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    transition: transform 0.5s ease-out; 
+    transform: translateY(0); 
+    z-index: 2; 
+  }
+  .textSubmit{
+    z-index: 3;
+    position: absolute;
+  }
+
+  .textSubmit:hover{
+    color: white;
+  }
+  &:hover {
+    color: white;
+    
+    &::after {
+      transform: translateY(-100%); 
+    }
+  }
+}
