--- a/src/components/blocks/RulesTerms/RulesTerms.module.scss
+++ b/src/components/blocks/RulesTerms/RulesTerms.module.scss
@@ -1,13 +1,15 @@
-.wrapper{
-    background-color: #151b28;
-    font-family: 'Montserrat', sans-serif;
+.wrapper {
+    background-color: #1b1b1b;
+    font-family: "Plus Jakarta Sans", sans-serif;
     background-size: cover;
     display: flex;
+    width: 100%;
+    display: block;
     justify-content: center;
     align-items: center;
 }
 
-.inner{
+.inner {
     display: flex;
     flex-direction: column;
     margin: auto;
@@ -18,56 +20,50 @@
     color: rgb(255, 255, 255);
 }
 
-.title{
+.title {
+    color: white;
     text-transform: capitalize;
     font-size: 40px;
     font-weight: 700;
     text-align: center;
 }
 
-.description{
-    padding: 50px;
-    text-align: center;
-    @media screen and (max-width: 456px) {
-        padding: 50px 0;
-    }
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer; 
+    padding: 15px;
+    border-radius: 5px;
 }
 
-.red{
-    color: #fc8252;
+.icon {
+    font-size: 32px; 
+    transition: transform 0.3s ease; 
+    background-color: white;
+    border-radius: 50%; 
+    width: 40px;
+    height: 40px; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 10px;
 }
 
-.buttonBlock{
-    margin: 0 auto;
-    width: 330px;
-    height: 80px;
-    @media screen and (max-width: 456px) {
-        width: 100%;
-    }
+.answer {
+    color: white;
+    font-size: 18px;
+    overflow: hidden;
+    padding: 0 15px;
+    transition: height 0.3s ease; 
 }
-
-.button{
-
-    width: 100%;
-    height: 100%;
-    font-size: 30px;
-    padding: 10px 15px;
-    background-color: #fc8252;
-    &:hover{
-        background-color: #cc6941 !important;
-    }
-    span{
-        height: 100%;
-    }
-
+.quastion{
+    width: 80%;
+    color: white;
+    font-size: 22px;
 }
-
-.okButton{
-    color: #FFFFFF;
-    background-color: #C74444;
-    &:hover{
-        color: #FFFFFF!important;
-        border-color: #fc8252 !important;
-        background-color: #fc8252 !important;
-    }
+.divider {
+    height: 1px; 
+    background-color: white; 
+    margin: 10px 0; 
 }
