--- a/src/components/blocks/Banner/Banner.module.scss
+++ b/src/components/blocks/Banner/Banner.module.scss
@@ -68,7 +68,7 @@
     color: #ffffff;
   }
   @media screen and (max-width: 760px) {
-    padding-top: 80px;;
+    padding-top: 0px;
     font-size: 44px;
   }
 }
@@ -78,7 +78,7 @@
   color: #FFF;
   margin-bottom: 20px;
   @media screen and (max-width: 860px) {
-    margin-bottom: 60px;
+    margin-bottom: 30px;
   }
 }
 
