--- a/src/components/blocks/AwardsnCat/AwardsnCat.module.scss
+++ b/src/components/blocks/AwardsnCat/AwardsnCat.module.scss
@@ -15,10 +15,13 @@
 }
 
 .title {
-    width: 100%; 
-    color: white; 
-    font-size: 32px; 
-    margin-bottom: 20px; 
+    width: 100%;
+    margin: 10px 0 20px 0;
+    color: white;
+    text-transform: capitalize;
+    font-size: 40px;
+    font-weight: 700;
+    text-align: center;
 }
 
 .awardBlock {
