--- a/src/components/blocks/Gallery/Gallery.module.scss
+++ b/src/components/blocks/Gallery/Gallery.module.scss
@@ -104,8 +104,6 @@ b{
     text-align: center;
     font-size: 18px;
     height: calc((100% - 30px) / 2) !important;
-  
-    /* Center slide text vertically */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -118,13 +116,48 @@ b{
         height: auto;
     }
   }
-  .swiperContainer {
-    position: relative; /* Чтобы дочерние элементы могли позиционироваться относительно этого контейнера */
+.buttonsContainer{
+    margin: 20px 0;
+    display: flex;
+    justify-content: center;
+    gap: 5px;
 }
+  
+  .customPrev {
+    font-size: 38px;
+    cursor: pointer;
+    color: white;
+    width: 50px;
+    height: 50px;
+    justify-content: center;
+    text-align: center;
+    border: 1px solid white;
+    transition: 0.3s all;
+      left: 0; /* Позиция кнопки "Предыдущий" */
+  }
+  
+  .stoproc{
+    width: 100%;
+  }
+  .customNext {
+    font-size: 38px;
+    width: 50px;
+    justify-content: center;
+    text-align: center;
+    height: 50px;
+    border: 1px solid white;
+    cursor: pointer;
+    color: white;
+    transition: 0.3s all;
+    right: 0; /* Позиция кнопки "Следующий" */
+  }
 
-.pagination {
-    position: absolute; /* Абсолютное позиционирование */
-    top: 10px; /* Отступ сверху */
-    right: 10px; /* Отступ справа */
-    z-index: 10; /* Убедитесь, что кнопки находятся поверх других элементов */
-}
+  .customNext:hover {
+    background-color: white;
+    color: #1b1b1b;
+  }
+  
+  .customPrev:hover {
+    background-color: white;
+    color: #1b1b1b;
+  }
