--- a/src/components/blocks/Overview/Overview.module.scss
+++ b/src/components/blocks/Overview/Overview.module.scss
@@ -32,6 +32,7 @@
   padding: 20px; 
   flex: 1; 
   transition: 0.5s; 
+  
 }
 
 .title {
@@ -40,7 +41,7 @@
   text-align: center;
   font-weight: 700;
   color: #FFF;
-  width: fit-content;
+  width: 100%;
   b {
     color: white;
   }
