--- a/src/components/blocks/RulesTerms/RulesTerms.module.scss
+++ b/src/components/blocks/RulesTerms/RulesTerms.module.scss
@@ -51,13 +51,13 @@
 }
 
 .answer {
-    color: white;
+    color: rgb(165, 165, 165);
     font-size: 18px;
     overflow: hidden;
     padding: 0 15px;
     transition: height 0.3s ease; 
 }
-.quastion{
+.question{
     width: 80%;
     color: white;
     font-size: 22px;
@@ -66,4 +66,9 @@
     height: 1px; 
     background-color: white; 
     margin: 10px 0; 
+}
+
+.showAllButton{
+    width: 100%;
+    margin: 30px 0;
 }
